# raspicam-control-qt

./: .gitignore  CMakeLists.txt  ControlInterface.cpp  ControlInterface.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  StreamInterface.cpp  StreamInterface.h  main.cpp
